--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,13 @@ body {
   overflow-x: hidden;
 }
 
-/* 1 Header*/
+/* 1 Header */
 
 .header {
   position: relative;
   z-index: 1;
   margin-bottom: 65px;
+  padding-bottom: 130px;
   width: 100%;
   font-family: OpenSans, sans-serif;
   font-style: normal;
@@ -125,11 +126,11 @@ body {
   border-top: 4px solid var(--white-color);
 }
 
+
 .header-intro-title {
   margin: 0 auto;
   text-align: center;
-  padding-top: 100px;
-  padding-bottom: 130px;
+  margin-top: 100px;
   max-width: 700px;
   line-height: 1.6;
   text-transform: uppercase;
@@ -139,7 +140,7 @@ body {
   color: var(--white-color);
 }
 
-/* 2 Common style*/
+/* 2 Общие*/
 
 .section-title {
   display: block;
@@ -150,9 +151,9 @@ body {
 
 .section-title::after {
   content: "";
-  position: absolute;
+  display: block;
   opacity: 0.4;
-  margin: 0 auto;
+  margin: 12px auto 0;
   top: 25px;
   bottom: 0;
   left: 0;
@@ -207,6 +208,9 @@ body {
   height: 20px;
   top: -30px;
   right: 0;
+  font-size: 20px;
+  cursor: pointer;
+  background-image: url(../svg/form-x.svg);
 }
 
 .popup-title {
@@ -330,7 +334,7 @@ body {
 }
 
 
-/* 4 Content */
+/* 4 Content style*/
 
 .content {
   margin-bottom: 65px;
@@ -417,7 +421,7 @@ body {
   column-gap: 120px;
 }
 
-/* 5 Main */
+/* 5 Main style*/
 
 .post-list {
   max-width: 775px;
@@ -436,10 +440,6 @@ body {
 .article-pic-lg {
   margin-right: 25px;
   width: 100%;
-}
-
-.article-content {
-  max-width: 364px;
 }
 
 .tag-list {
@@ -503,7 +503,7 @@ body {
 }
 
 
-/* 6 Aside */
+/* 6 Aside style*/
 
 .sidebar {
   width: 275px;
@@ -553,6 +553,22 @@ body {
   font-weight: 400;
 }
 
+.field {
+  box-sizing: border-box;
+  align-items: center;
+  border: none;
+  overflow: hidden;
+  width: 100%;
+  height: 50px;
+  padding: 0 20px;
+  background: var(--light-gray);
+}
+
+.field:focus {
+  outline: 1px solid #b59f5b;
+  outline-offset: -2px;
+}
+
 .search {
   margin-bottom: 60px;
 }
@@ -577,19 +593,8 @@ body {
   width: 100%;
 }
 
-.field {
-  box-sizing: border-box;
-  align-items: center;
-  border: none;
-  width: 100%;
-  height: 50px;
-  padding: 20px 20px;
-  background: var(--light-gray);
-}
-
-.field:focus {
-  outline: none;
-  border: 2px solid var(--accent-color);
+.search-field {
+  width: 225px;
 }
 
 .search-btn {
@@ -675,15 +680,6 @@ body {
   color: #000;
 }
 
-.tags-item-link::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 .categories {
   margin-bottom: 45px;
 }
@@ -707,7 +703,7 @@ body {
 }
 
 
-/* 7 Shop */
+/* 7 Shop style*/
 
 .shop {
   padding-top: 60px;
@@ -742,7 +738,6 @@ body {
 
 .item-img {
   display: block;
-  width: 100%;
   height: 204px;
 }
 
@@ -806,7 +801,7 @@ body {
   cursor: pointer;
 }
 
-/* 8 Footer */
+/* 8 Footer style*/
 
 .social {
   margin-bottom: 70px;
@@ -831,7 +826,7 @@ body {
   display: flex;
   width: 20px;
   height: 20px;
-  padding: 30px 0;
+  margin: 30px 0;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px;
