--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,10 @@ body {
   background-image: url(../svg/form-x.svg);
 }
 
+.popup-closer:hover {
+  background-color: #eee;
+}
+
 .popup-title {
   margin-bottom: 40px;
   text-transform: uppercase;
@@ -442,6 +446,7 @@ body {
   width: 100%;
 }
 
+
 .tag-list {
   display: flex;
   flex-wrap: wrap;
@@ -594,7 +599,7 @@ body {
 }
 
 .search-field {
-  width: 225px;
+  width: 85%;
 }
 
 .search-btn {
@@ -1032,7 +1037,7 @@ body {
 
 @media (max-width: 640px) {
   .header {
-    margin-bottom: 40px;
+    padding-bottom: 40px;
     background-image: url(../img/banner-mobile.jpg);
   }
 
@@ -1043,26 +1048,23 @@ body {
   .burger {
     order: -1;
     align-self: end;
+    display: flex;
   }
 
   .header-menu {
     display: none;
   }
 
-  .burger {
-    display: block;
-  }
-
-  .header-logo {
+   .header-logo {
     width: 269px;
     padding-top: 160px;
   }
 
   .header-intro-title {
-    padding-top: 43px;
-    padding-bottom: 220px;
+    margin: 43px 0 220px;
     font-size: 26px;
     line-height: 1.3;
+
   }
 
   .popup-content {
@@ -1156,6 +1158,10 @@ body {
 
   .search {
     margin-bottom: 45px;
+  }
+
+  .search-field {
+    width: 85%;
   }
 
   .tags-list {
